# MinecraftServerCLI

./: .gitignore  Cargo.toml  README.md  pom.xml
src/: main.rs
src/main/java/de/tamion/: BuildsCommand.java  InstallCommand.java  MinecraftServerCLICommand.java  PaperCLICommand.java  ProjectsCommand.java  StartCommand.java  VersionsCommand.java
