[package]
name = "MinecraftServerCLI"
description = "Quickly install build of Minecraft server software"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
reqwest = "0.11"
serde_json = "1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
